# WebServer

./: CGI.h  CMakeLists.txt  IO_supervisor.cpp  IO_supervisor.h  README.md  TCP_server.cpp  TCP_server.h  client.cpp  client.h  main.cpp  request.cpp  request.h  response.cpp  response.h  socket.cpp  socket.h
linux/: CGI.cpp  socket.cpp
win/: WSA.cpp  WSA.h  socket.cpp
www/: script.py
